...
    >
      <Tab.Screen
        name="Profile"
        component={ProfileNavigator}
        options={{
          tabBarIcon: ({ color, size }) => <Icon name="person" size={size} color={color} />,
          tabBarTestID: "profileTabButton"
        }}
      />
      <Tab.Screen
        name="Home"
        component={HomeScreen}
        options={{
...
