...
        __DEV__ && console.log(res.user.displayName, res.user.email, token);
        userStore.postUser(res.user.displayName, res.user.email, res.user.uid);
      });
    });
  }

  const testSignIn = () => {
    auth().signInWithEmailAndPassword("testuser3@testy.com", "123456").then(res => {
      res.user.getIdToken(true).then(() => {
        userStore.postUser("Bob sagget test user", res.user.email, res.user.uid);
      });
    }).catch(err => {
      __DEV__ && console.log("Failed to auth with test: " + err);
...
